--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@ MANIFEST
 *.manifest
 *.spec
 
+
+# Secrets:
+secrets/
+secrets/*
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
@@ -200,7 +205,7 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
-
+node_modules
 # Marimo
 marimo/_static/
 marimo/_lsp/
