--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,12 @@ services:
     build: ./backend
     ports:
       - "8000:8000"
+    env_file:
+      - .env
 
-  frontend:
-    build: ./frontend
-    ports:
-      - "3000:80"
-    depends_on:
-      - backend
+#  frontend:
+#    build: ./frontend
+#    ports:
+#      - "3000:80"
+#    depends_on:
+#      - backend
