--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -13,10 +13,12 @@ dist-ssr
 *.local
 package-lock.json
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+__pycache__/
+*.pyc
+*.pyo
+venv/
+
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
