--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,34 @@
-version: "3.9"
-
 services:
+
+  db:
+    image: postgres:15
+    container_name: db
+    environment:
+      POSTGRES_USER: POSTGRES
+      POSTGRES_PASSWORD: POSTGRES
+      POSTGRES_DB: file_management
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U POSTGRES" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+
   backend:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
     ports:
       - "8000:8000"
     env_file:
       - .env
+    depends_on:
+      db:
+        condition: service_healthy
 
 #  frontend:
 #    build: ./frontend
@@ -14,3 +36,6 @@ services:
 #      - "3000:80"
 #    depends_on:
 #      - backend
+
+volumes:
+  postgres_data:
