--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,5 @@ google-cloud-storage==2.10.0
 python-multipart
 prometheus-client
 prometheus-fastapi-instrumentator
+elasticsearch[async]==8.10.0
+PyPDF2==3.0.1
