--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       elasticsearch:
         condition: service_healthy
     volumes:
-      - ./uploads:/app/uploads  # Add this - persists uploaded files
+      - ./uploads:/app/uploads
 
   prometheus:
     image: prom/prometheus
