--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,6 @@ prometheus-fastapi-instrumentator
 elasticsearch[async]==8.10.0
 PyPDF2==3.0.1
 
-pytest
-pytest-asyncio
-pytest-mock
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-mock>=3.11.0
