--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -55,23 +55,23 @@ jobs:
         run: |
           pytest tests --maxfail=1 --disable-warnings --cov=src --cov-report=xml
 
-      # 7. Build Docker image (optional if you want containerized deployment)
+      # 7. Build Docker image
       - name: Build Docker image
         run: |
-          docker build -t my-app:${{ github.sha }} .
+          docker build -t ghcr.io/${{ github.repository_owner }}/file_management:${{ github.sha }} .
 
-      # 8. Login to Docker Hub
-      - name: Docker Hub Login
+      # 8. Login to GitHub Container Registry
+      - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # 9. Tag and push Docker image (main branch only)
       - name: Tag and push Docker image
         if: github.ref == 'refs/heads/main'
         run: |
-          docker tag my-app:${{ github.sha }} my-dockerhub-username/my-app:latest
-          docker tag my-app:${{ github.sha }} my-dockerhub-username/my-app:${{ github.sha }}
-          docker push my-dockerhub-username/my-app:latest
-          docker push my-dockerhub-username/my-app:${{ github.sha }}
+          docker tag ghcr.io/${{ github.repository_owner }}/file_management:${{ github.sha }} ghcr.io/${{ github.repository_owner }}/file_management:latest
+          docker push ghcr.io/${{ github.repository_owner }}/file_management:latest
+          docker push ghcr.io/${{ github.repository_owner }}/file_management:${{ github.sha }}
