--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -44,7 +44,9 @@ jobs:
       # 5. Run unit tests
       - name: Run unit tests
         working-directory: backend
-        run: PYTHONPATH=. pytest tests --maxfail=1 --disable-warnings -v
+        run: |
+          export PYTHONPATH=.
+          pytest tests --maxfail=1 --disable-warnings -v
 
       # 5. Run linting
       - name: Lint code with flake8
