--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -58,7 +58,7 @@ jobs:
       # 7. Build Docker image
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/file_management:${{ github.sha }} .
+          docker build -t ghcr.io/${{ github.repository_owner | lower }}/file_management:${{ github.sha }} .
 
       # 8. Login to GitHub Container Registry
       - name: Log in to GHCR
@@ -72,6 +72,6 @@ jobs:
       - name: Tag and push Docker image
         if: github.ref == 'refs/heads/main'
         run: |
-          docker tag ghcr.io/${{ github.repository_owner }}/file_management:${{ github.sha }} ghcr.io/${{ github.repository_owner }}/file_management:latest
-          docker push ghcr.io/${{ github.repository_owner }}/file_management:latest
-          docker push ghcr.io/${{ github.repository_owner }}/file_management:${{ github.sha }}
+          docker tag ghcr.io/${{ github.repository_owner | lower }}/file_management:${{ github.sha }} ghcr.io/${{ github.repository_owner | lower }}/file_management:latest
+          docker push ghcr.io/${{ github.repository_owner | lower }}/file_management:latest
+          docker push ghcr.io/${{ github.repository_owner | lower }}/file_management:${{ github.sha }}
