--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -55,11 +55,10 @@ jobs:
           export PYTHONPATH=.
           pytest tests
 
-      # 7. Build Docker image
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner | lower }}/file_management:${{ github.sha }} .
-
+          DOCKER_USER_LOWER=$(echo $DOCKER_USERNAME | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$DOCKER_USER_LOWER/file_management:${{ github.sha }} .
       # 8. Login to GitHub Container Registry
       - name: Log in to GHCR
         uses: docker/login-action@v2
@@ -68,10 +67,10 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 9. Tag and push Docker image (main branch only)
       - name: Tag and push Docker image
         if: github.ref == 'refs/heads/main'
         run: |
-          docker tag ghcr.io/${{ github.repository_owner | lower }}/file_management:${{ github.sha }} ghcr.io/${{ github.repository_owner | lower }}/file_management:latest
-          docker push ghcr.io/${{ github.repository_owner | lower }}/file_management:latest
-          docker push ghcr.io/${{ github.repository_owner | lower }}/file_management:${{ github.sha }}
+          DOCKER_USER_LOWER=$(echo $DOCKER_USERNAME | tr '[:upper:]' '[:lower:]')
+          docker tag ghcr.io/$DOCKER_USER_LOWER/file_management:${{ github.sha }} ghcr.io/$DOCKER_USER_LOWER/file_management:latest
+          docker push ghcr.io/$DOCKER_USER_LOWER/file_management:latest
+          docker push ghcr.io/$DOCKER_USER_LOWER/file_management:${{ github.sha }}
