--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -57,9 +57,9 @@ jobs:
 
       - name: Build Docker image
         run: |
-          DOCKER_USER_LOWER=$(echo $DOCKER_USERNAME | tr '[:upper:]' '[:lower:]')
-          docker build -t ghcr.io/$DOCKER_USER_LOWER/file_management:${{ github.sha }} .
-      # 8. Login to GitHub Container Registry
+          REPO_OWNER_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$REPO_OWNER_LOWER/file_management:${{ github.sha }} .
+
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
@@ -70,7 +70,7 @@ jobs:
       - name: Tag and push Docker image
         if: github.ref == 'refs/heads/main'
         run: |
-          DOCKER_USER_LOWER=$(echo $DOCKER_USERNAME | tr '[:upper:]' '[:lower:]')
-          docker tag ghcr.io/$DOCKER_USER_LOWER/file_management:${{ github.sha }} ghcr.io/$DOCKER_USER_LOWER/file_management:latest
-          docker push ghcr.io/$DOCKER_USER_LOWER/file_management:latest
-          docker push ghcr.io/$DOCKER_USER_LOWER/file_management:${{ github.sha }}
+          REPO_OWNER_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          docker tag ghcr.io/$REPO_OWNER_LOWER/file_management:${{ github.sha }} ghcr.io/$REPO_OWNER_LOWER/file_management:latest
+          docker push ghcr.io/$REPO_OWNER_LOWER/file_management:latest
+          docker push ghcr.io/$REPO_OWNER_LOWER/file_management:${{ github.sha }}
