--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -56,6 +56,7 @@ jobs:
           pytest tests
 
       - name: Build Docker image
+        working-directory: backend
         run: |
           REPO_OWNER_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
           docker build -t ghcr.io/$REPO_OWNER_LOWER/file_management:${{ github.sha }} .
