--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,15 @@ services:
       timeout: 5s
       retries: 5
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    depends_on:
+        - backend
+
 volumes:
   postgres_data:
   uploads:
