--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,8 @@ prometheus-client
 prometheus-fastapi-instrumentator
 elasticsearch[async]==8.10.0
 PyPDF2==3.0.1
+cloud-sql-python-connector[asyncpg]==1.6.0
+
 
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
