--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,6 +15,9 @@ COPY tsconfig.app.json ./
 COPY tsconfig.node.json ./
 COPY vite.config.ts ./
 
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 # Build the app
 RUN npm run build
 
